--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.17</version>
+<!--            <version>5.1.17</version>-->
+            <version>8.0.18</version>
         </dependency>
         <dependency>
             <groupId>c3p0</groupId>
@@ -56,6 +57,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.8</version>
                 <configuration>
                     <excludes>
                         <exclude>
@@ -65,6 +67,22 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <!-- Source attach plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
